--- a/index.html
+++ b/index.html
@@ -188,13 +188,13 @@
             // Add your real URLs here
             const urls = {
                 'twitch': 'https://www.twitch.tv/jaywizgoof',
-                'instagram': 'https://www.instagram.com/jaydencbrown/?__pwa=1',
-                'tiktok': 'https://www.tiktok.com/@YOUR_USERNAME',
+                'instagram': 'https://www.instagram.com/downtown_jaybrown/?__pwa=1',
+                'tiktok': 'https://www.tiktok.com/@downtown_jaybrown',
                 'youtube': 'https://www.youtube.com/@Jays-Odyssey',
                 'youtube-main': 'https://www.youtube.com/@Jays-Odyssey',
                 'twitch-main': 'https://www.twitch.tv/jaywizgoof',
                 'gaming-youtube': 'https://www.youtube.com/channel/UClcqiV3fnkK1SpfPTrsaSCw',
-                'instagram-main': 'https://www.instagram.com/jaydencbrown/?__pwa=1',
+                'instagram-main': 'https://www.instagram.com/downtown_jaybrown/?__pwa=1',
                //  'twitter': 'https://twitter.com/YOUR_USERNAME' // Will get one soon
             };
             
@@ -203,4 +203,5 @@
         }
     </script>
 </body>
+
 </html>
